# jiya-persona

./: .env.example  .gitignore  BRIEF.md  DEPLOY.md  README.md  architecture.md
.playwright-mcp/: page-2026-05-03T21-29-03-118Z.yml  page-2026-05-03T21-39-28-706Z.yml  page-2026-05-03T21-39-56-541Z.yml  page-2026-05-03T21-40-53-385Z.yml  page-2026-05-03T21-42-42-649Z.yml  page-2026-05-03T21-44-19-833Z.yml  page-2026-05-03T21-44-51-226Z.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  main.py
backend/app/agent/: chat.py  system_prompt.py  tools.py
backend/app/calendar_integration/: calcom.py
backend/app/rag/: chunking.py  embedder.py  github_ingest.py  repo_summarizer.py  resume_ingest.py  retriever.py
backend/app/routes/: booking.py  chat.py  openai_compat.py  voice.py
backend/app/scripts/: booking_smoke.py  chat_smoke.py  chat_smoke_2.py  openai_shim_smoke.py  prod_smoke.py  reingest.py  retrieval_smoke.py
backend/app/telemetry/: latency_log.py
backend/data/repo_cards/: Book-Finder.json  Contact-Manager-App.json  PatientRecordSystem.json  SingoneSong.json  Social-Network-Friend-Recommendation-System.json  search-listings.json  weather-app.json
evals/: generate_report.py  run_evals.py  test_set.json
evals/results/: latest.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BookingInline.tsx  ChatWindow.tsx  MessageBubble.tsx  SourceCitation.tsx
vapi/: SETUP.md  assistant_config.json
(+2 files in other folders)
